--- a/src/components/CardList/cardList.scss
+++ b/src/components/CardList/cardList.scss
@@ -18,8 +18,8 @@
   }
   .project-card {
     position: relative;
-    // width: 100%;
-    height: 120vw;
+    width: 100%;
+    height: 40rem;
     //   background-color: lightblue;
     overflow: hidden;
     border-radius: 0.5rem;
@@ -162,44 +162,62 @@
       transition: transform 0.525s ease-in-out;
 
       img {
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 40rem;
         object-fit: cover;
-        object-position: bottom;
-      }
-    }
-
-    a {
-      display: block;
-      width: 100%;
-      height: 100%;
-      &:hover {
-        .tags {
-          .languages.top {
-            top: 3.2rem;
-            opacity: 1;
-            transition-delay: 0.1s;
-          }
-          .topics.bottom {
-            top: 1.5rem;
-            opacity: 0;
-            transition-delay: 0s;
-          }
-        }
-
-        button {
-          opacity: 1;
-        }
-
-        .thumbnail {
-          transform: scale(1.015);
-        }
+        object-position: center;
       }
     }
 
     @include media-queries.breakpoint(tablet) {
       width: calc(50% - 1.25rem);
       height: 50vw;
+
+      .thumbnail {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 0;
+        transform: scale(1);
+        transition: transform 0.525s ease-in-out;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: bottom;
+        }
+      }
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        &:hover {
+          .tags {
+            .languages.top {
+              top: 3.2rem;
+              opacity: 1;
+              transition-delay: 0.1s;
+            }
+            .topics.bottom {
+              top: 1.5rem;
+              opacity: 0;
+              transition-delay: 0s;
+            }
+          }
+
+          button {
+            opacity: 1;
+          }
+
+          .thumbnail {
+            transform: scale(1.015);
+          }
+        }
+      }
     }
   }
 }
